updated emzeblog website

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <table cellspacing = "20">
-            <td><img src="C:\Users\BONAVENTURE\Web Development\Html - Project\images\20 - fake-human-circle-img.png" alt="My profile pic"></td>
+            <td><img src="images\20 - fake-human-circle-img.png" alt="My profile pic"></td>
             <td><h1>Iwuji Emmanuel</h1>
                 <p><em>CEO of <b><a href="tutorial.html">Emzee Python tutorial</a></b></em></p>
                 <p>I am a Front-end Developer, currently working on my skills to become a full stack.</p>
